--- a/application/mobile/view/apply/apply.html
+++ b/application/mobile/view/apply/apply.html
@@ -154,6 +154,25 @@
                     $("#img1").val('');
                 }
             });
+            $('.apply_grade').click(function(){
+                $('.apply_grade_mask').show();
+                $('.mask_content').animate({
+                    bottom:'0'
+                },500)
+            })
+            $('.mask_content_icon,.apply_grade_mask').click(function(){
+                $('.apply_grade_mask').hide();
+                $('.mask_content').animate({
+                    bottom:'-100%'
+                },500)
+            })
+            $('.mask_content_item').click(function(){
+                event.stopPropagation();
+                if(!$(this).hasClass('active')){
+                    $(this).addClass('active');
+                    $(this).siblings().removeClass('active');
+                }
+            })
         })
     </script>
 </body>
